--- a/.github/workflows/nightly-mac-ci.yml
+++ b/.github/workflows/nightly-mac-ci.yml
@@ -12,7 +12,7 @@ jobs:
       label: 'nightly-sec-mac-ci'
       cmake-args: "-DSECURITY=ON"
       ctest-args: "-LE xfail"
-      fastdds_branch: 'master'
+      fastdds-branch: 'master'
 
   nightly-nosec-mac-ci:
     uses: ./.github/workflows/reusable-mac-ci.yml
@@ -20,4 +20,4 @@ jobs:
       label: 'nightly-nosec-mac-ci'
       cmake-args: "-DSECURITY=OFF"
       ctest-args: "-LE xfail"
-      fastdds_branch: 'master'
+      fastdds-branch: 'master'
