Refs #20091: Print summary and only show failed list
Signed-off-by: EduPonz <eduardoponz@eprosima.com>

--- a/.github/workflows/reusable-mac-ci.yml
+++ b/.github/workflows/reusable-mac-ci.yml
@@ -144,4 +144,6 @@ jobs:
         run: |
           python3 src/fastrtps/.github/workflows/utils/junit_summary.py \
             --junit-report build/fastrtps/junit/junit.xml \
-            --output-file $GITHUB_STEP_SUMMARY
+            --output-file $GITHUB_STEP_SUMMARY \
+            --print-summary \
+            --show-failed
