Refs #20091: Try to use python 3.11
Signed-off-by: EduPonz <eduardoponz@eprosima.com>

--- a/.github/workflows/reusable-mac-ci.yml
+++ b/.github/workflows/reusable-mac-ci.yml
@@ -44,10 +44,14 @@ jobs:
           path: src/fastrtps
           ref: ${{ inputs.fastdds-branch }}
 
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
       - name: Install brew dependencies
         uses: eProsima/eProsima-CI/macos/install_brew_packages@feature/fastdds_mac_ci_support
         with:
-          packages: llvm asio tinyxml2 openssl python3
+          packages: llvm asio tinyxml2 openssl
           update: false
           upgrade: false
 
