Refs #20091: Specify colcon workspace
Signed-off-by: EduPonz <eduardoponz@eprosima.com>

--- a/.github/workflows/reusable-mac-ci.yml
+++ b/.github/workflows/reusable-mac-ci.yml
@@ -133,6 +133,7 @@ jobs:
           colcon_build_args_default: --event-handlers=console_direct+
           cmake_args: ${{ inputs.cmake-args }}
           cmake_build_type: ${{ matrix.cmake-build-type }}
+          workspace: ${{ github.workspace }}
 
       - name: Colcon test
         id: test
