Refs #20091: Set workspace for colcon test
Signed-off-by: EduPonz <eduardoponz@eprosima.com>

--- a/.github/workflows/reusable-mac-ci.yml
+++ b/.github/workflows/reusable-mac-ci.yml
@@ -145,6 +145,7 @@ jobs:
           colcon_test_args_default: --packages-select fastrtps --event-handlers=console_direct+
           ctest_args: ${{ inputs.ctest-args }}
           ctest_args_default: --repeat until-pass:3 --timeout 300 --output-junit junit/junit.xml
+          workspace: ${{ github.workspace }}
 
       - name: Create test summary
         id: summary
