Refs #17513: Correctly name job
Signed-off-by: EduPonz <eduardoponz@eprosima.com>

--- a/.github/workflows/reusable-ubuntu-ci.yml
+++ b/.github/workflows/reusable-ubuntu-ci.yml
@@ -29,7 +29,7 @@ defaults:
     shell: bash
 
 jobs:
-  reusable-mac-ci:
+  reusable-ubuntu-ci:
     runs-on: ubuntu-22.04
     if: ${{ !contains(github.event.pull_request.labels.*.name, 'skip-ci') }}
     strategy:
