Refs #17513: Install python packages without sudo
Signed-off-by: EduPonz <eduardoponz@eprosima.com>

--- a/.github/workflows/reusable-ubuntu-ci.yml
+++ b/.github/workflows/reusable-ubuntu-ci.yml
@@ -64,7 +64,7 @@ jobs:
         uses: eProsima/eProsima-CI/ubuntu/install_colcon@v0
 
       - name: Install Python dependencies
-        uses: eProsima/eProsima-CI/ubuntu/install_python_packages@v0
+        uses: eProsima/eProsima-CI/ubuntu/install_python_packages@feature/fastdds_mac_ci_support
         with:
           packages: vcstool xmlschema
           upgrade: false
